src/Kanbas/styles.css
body   {  margin: 0;  padding: 0;  }
body * {  font-family: Arial, Helvetica, sans-serif;  }

@media (min-width: 768px) {
  #wd-kanbas .wd-main-content-offset {
    padding-left: 140px !important;
  }
}
.list-group.wd > .list-group-item.active {
  color: black;
  background-color: white;
  border-left: 3px solid black !important;
}
.btn-secondary {
  --bs-btn-color: #000 !important;
  --bs-btn-bg: #c7cdd1 !important;
  --bs-btn-border-color: #c7cdd1 !important;
  --bs-btn-hover-color: #fff !important;
}
.bg-secondary {
  --bs-secondary-rgb: 199, 205, 209;
}
.list-group-item {
  --bs-list-group-border-color: gray;
}
.wd-lesson{
  border-left: 3px solid green !important;
}

.icon {
  height: 1.5rem;
  width: 1.5rem;
  padding: 4px;
  position: absolute;
  box-sizing:border-box;
  top:50%;
  left:10px;
  transform: translateY(-50%);
}

#wd-search-assignment{
  padding-left: 1.5rem;
}

.wd-assignment-list-item {
  border-left: 3px solid green !important;
  
}

.wd-assignment-link{
  text-decoration: none; 
  color: black;
}

.wd-red-para{
  color: red;
}

.red{
  color:red;
}

